--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "npm": "^5.7.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "yelp-fusion": "^2.0.3"
   },
   "devDependencies": {},
   "scripts": {
