--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "findango-api": "^1.0.0",
     "npm": "^5.7.1",
     "path": "^0.12.7",
     "yelp-fusion": "^2.0.3"
